K8S/platform-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    port: 80
    protocol: TCP
    nodePort: 30036
    targetPort: 80
