K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: mostafa5/platformservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - port: 80
    targetPort: 80
    name: platformservice
    protocol: TCP
  - name: platformfrpc
    protocol: TCP
    port: 666
    targetPort: 666
